--- a/MyScrollView/MyScrollView/Base.lproj/Main.storyboard
+++ b/MyScrollView/MyScrollView/Base.lproj/Main.storyboard
@@ -20,6 +20,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mGU-QA-ZL8" customClass="MyScrollView">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
